--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -827,7 +827,10 @@
       if (!currentUser) return;
 
       const mercadosRef = collection(db, "mercados");
-      const q = query(mercadosRef, where("userEmail", "==", currentUser));
+      // Buscar mercados do admin e do usuário atual
+      const q = query(mercadosRef,
+        where("userEmail", "in", ["admin@rwtips.com", currentUser])
+      );
 
       try {
         const querySnapshot = await getDocs(q);
@@ -856,14 +859,16 @@
           : mercados.map(mercado => `
               <div class="market-item">
                 <span>${mercado.nome}</span>
-                <button class="remove-button" data-id="${mercado.id}">
-                  <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <polyline points="3 6 5 6 21 6"></polyline>
-                    <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                    <line x1="10" y1="11" x2="10" y2="17"></line>
-                    <line x1="14" y1="11" x2="14" y2="17"></line>
-                  </svg>
-                </button>
+                ${mercado.userEmail === currentUser ? `
+                  <button class="remove-button" data-id="${mercado.id}">
+                    <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <polyline points="3 6 5 6 21 6"></polyline>
+                      <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                      <line x1="10" y1="11" x2="10" y2="17"></line>
+                      <line x1="14" y1="11" x2="14" y2="17"></line>
+                    </svg>
+                  </button>
+                ` : ''}
               </div>
             `).join("");
 
@@ -911,13 +916,15 @@
       }
     }
 
-    // Função para carregar as apostas (ajustada para mostrar todas)
+    // Função para carregar as apostas
     function carregarApostas() {
       const apostasLista = document.getElementById("apostas-lista");
       apostasLista.innerHTML = '<div class="loading">Carregando apostas</div>';
 
+      // Filtrar apostas apenas do usuário atual
       const apostasRef = query(
         collection(db, "apostas"),
+        where("userEmail", "==", currentUser),
         orderBy("timestamp", "desc")
       );
 
@@ -929,6 +936,11 @@
         if (snapshot.empty) {
           apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada</div>';
           document.getElementById("grafico").innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Sem dados para exibir</div>';
+
+          // Zerar totais quando não há apostas
+          document.getElementById("ganho-total").innerHTML = `Ganho Total<strong>${formatarMoeda(0)}</strong>`;
+          document.getElementById("perda-total").innerHTML = `Perda Total<strong>${formatarMoeda(0)}</strong>`;
+          document.getElementById("saldo-total").innerHTML = `Saldo Total<strong>${formatarMoeda(0)}</strong>`;
           return;
         }
 
