--- a/visualization.html
+++ b/visualization.html
@@ -66,13 +66,31 @@
 
         .logo-text {
             font-size: 1.8rem;
-            background: linear-gradient(45deg, var(--accent-color), var(--primary-color));
+            background: linear-gradient(45deg, #00ff88, #00ffaa);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
             font-weight: 700;
             letter-spacing: 2px;
             margin-top: 10px;
+            text-shadow: 0 0 10px rgba(0, 255, 136, 0.5),
+                0 0 20px rgba(0, 255, 136, 0.3),
+                0 0 30px rgba(0, 255, 136, 0.2);
+            animation: neonPulse 1.5s ease-in-out infinite alternate;
+        }
+
+        @keyframes neonPulse {
+            from {
+                text-shadow: 0 0 10px rgba(0, 255, 136, 0.5),
+                    0 0 20px rgba(0, 255, 136, 0.3),
+                    0 0 30px rgba(0, 255, 136, 0.2);
+            }
+
+            to {
+                text-shadow: 0 0 15px rgba(0, 255, 136, 0.7),
+                    0 0 25px rgba(0, 255, 136, 0.5),
+                    0 0 35px rgba(0, 255, 136, 0.3);
+            }
         }
 
         h1 {
