--- a/results.html
+++ b/results.html
@@ -312,30 +312,48 @@
                     const resultsContainer = document.getElementById('resultsContainer');
                     resultsContainer.innerHTML = '';
 
+                    if (!results || results.length === 0) {
+                        resultsContainer.innerHTML = `
+                            <div style="text-align: center; padding: 20px; color: var(--text-secondary);">
+                                Nenhum resultado encontrado
+                            </div>
+                        `;
+                        return;
+                    }
+
                     results.forEach(result => {
+                        const homePlayer = extractPlayerName(result.home);
+                        const awayPlayer = extractPlayerName(result.away);
+
                         const card = document.createElement('div');
                         card.className = 'result-card';
 
                         const leagueInfo = getLeagueDisplayName(result.leagueName);
 
+                        const scoreClass = result.score.includes('-') ?
+                            (parseInt(result.score.split('-')[0]) > parseInt(result.score.split('-')[1]) ? 'home-win' :
+                                parseInt(result.score.split('-')[0]) < parseInt(result.score.split('-')[1]) ? 'away-win' : 'draw') : '';
+
                         card.innerHTML = `
                             <div class="league-name" style="color: ${leagueInfo.color}">${leagueInfo.name}</div>
                             <div class="match-info">
                                 <div class="team">
-                                    <img src="${result.homeImage}" alt="${result.home_team_name}">
-                                    <div class="team-name">${result.home_team_name}</div>
-                                    <div class="player-name">${extractPlayerName(result.home)}</div>
+                                    <img src="${result.homeImage || 'placeholder.png'}" alt="${result.home_team_name}" 
+                                         onerror="this.src='https://via.placeholder.com/70'">
+                                    <div class="team-name">${result.home_team_name || 'Time Casa'}</div>
+                                    <div class="player-name">${homePlayer}</div>
                                 </div>
-                                <div class="score">${result.score}</div>
+                                <div class="score ${scoreClass}">${result.score || '0-0'}</div>
                                 <div class="team">
-                                    <img src="${result.awayImage}" alt="${result.away_team_name}">
-                                    <div class="team-name">${result.away_team_name}</div>
-                                    <div class="player-name">${extractPlayerName(result.away)}</div>
+                                    <img src="${result.awayImage || 'placeholder.png'}" alt="${result.away_team_name}"
+                                         onerror="this.src='https://via.placeholder.com/70'">
+                                    <div class="team-name">${result.away_team_name || 'Time Visitante'}</div>
+                                    <div class="player-name">${awayPlayer}</div>
                                 </div>
                             </div>
                             <div class="match-details">
-                                <div>HT: ${result.scoreHT}</div>
-                                <div>${result.day} ${result.hour}</div>
+                                <div>HT: ${result.scoreHT || '0-0'}</div>
+                                <div>${result.day || ''} ${result.hour || ''}</div>
                             </div>
                         `;
 
@@ -346,15 +364,20 @@
                     const selectedLeague = document.getElementById('leagueFilter').value;
                     if (selectedLeague) {
                         const cards = resultsContainer.getElementsByClassName('result-card');
-                        for (let card of cards) {
+                        Array.from(cards).forEach(card => {
                             const leagueName = card.querySelector('.league-name').textContent;
                             card.style.display = selectedLeague === leagueName ? '' : 'none';
-                        }
+                        });
                     }
                 })
                 .catch(error => {
                     console.error('Erro ao buscar resultados:', error);
-                    alert('Erro ao carregar resultados. Por favor, tente novamente.');
+                    const resultsContainer = document.getElementById('resultsContainer');
+                    resultsContainer.innerHTML = `
+                        <div style="text-align: center; padding: 20px; color: var(--danger-color);">
+                            Erro ao carregar resultados. Por favor, tente novamente.
+                        </div>
+                    `;
                 });
         }
 
