--- a/results.html
+++ b/results.html
@@ -306,7 +306,7 @@
 
         function updateResults() {
             console.log('Iniciando busca de resultados...');
-            fetch('https://api.green365.com.br/api/league/results?sport=fifa&leagueId=&page=1')
+            fetch('https://api.green365.com.br/api/events/ended?sport_id=4&competition_id=&page=1')
                 .then(response => {
                     console.log('Resposta recebida:', response.status);
                     if (!response.ok) {
